change profile picture

--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,7 @@ table {
 }
 /* ==========================================================================Hero========================================================================== */
 .hero {
-	background: url('../img/huong_profile_nobg2.png') right bottom no-repeat;
+	background: url('../img/huong-profile3.jpeg') right bottom no-repeat;
 	background-size: contain;
 	padding:110px 0 100px 0;
 	height:auto;
